--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,13 @@
       <version>${log4j.version}</version>
     </dependency>
 
+    <!--jtds-->
+    <dependency>
+      <groupId>net.sourceforge.jtds</groupId>
+      <artifactId>jtds</artifactId>
+      <version>1.3.1</version>
+    </dependency>
+
     <!--mybatis-->
     <dependency>
       <groupId>org.mybatis</groupId>
